--- a/.env
+++ b/.env
@@ -7,7 +7,8 @@ DB_PORT=27017
 DB_USER=
 DB_PASS=
 DB_NAME=cloud
-ACCESS_TOKEN_EXPIRY_HOUR = 2
-REFRESH_TOKEN_EXPIRY_HOUR = 168
+ORIGINS=http://localhost:5173
+ACCESS_TOKEN_EXPIRY_HOUR=2
+REFRESH_TOKEN_EXPIRY_HOUR=168
 ACCESS_TOKEN_SECRET=access_token_secret
 REFRESH_TOKEN_SECRET=refresh_token_secret
