--- a/.env
+++ b/.env
@@ -2,10 +2,8 @@ APP_ENV=development
 SERVER_ADDRESS=:8080
 PORT=8080
 CONTEXT_TIMEOUT=2
-DB_HOST=0.0.0.0
-DB_PORT=27017
-DB_USER=
-DB_PASS=
+#DB_HOST=mongodb://localhost:27017
+DB_HOST=mongodb+srv://cloudy11:Tranquandat438@cloudy.ejxjass.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=cloud
 ORIGINS=http://localhost:5173
 ACCESS_TOKEN_EXPIRY_HOUR=2
