--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ CONTEXT_TIMEOUT=2
 #DB_HOST=mongodb://localhost:27017
 DB_HOST=mongodb+srv://cloudy11:Tranquandat438@cloudy.ejxjass.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=cloud
-ORIGINS=http://localhost:3000,http://localhost:5173,https://cloudy-front-c9512a279eab.herokuapp.com/
+ORIGINS=http://localhost:3000,http://localhost:5173,https://startling-chaja-3b7ecd.netlify.app
 ACCESS_TOKEN_EXPIRY_HOUR=2
 REFRESH_TOKEN_EXPIRY_HOUR=168
 ACCESS_TOKEN_SECRET=access_token_secret
